--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 #email-input>input{
   border: none;
   outline: none;
-
+  width: 100%;
 }
 #email-input:focus-within{
   box-shadow: 0px 0px 0px 5px rgb(159, 191, 235);
