--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,33 @@
   background-color: orange !important;
   transition: all .2s ease;
 }
+#btn-join{
+  border: none;
+  color: white;
+  font-size: 20px;
+  transition: all .1s ease;
+}
+#btn-join:hover{
+  background-color: rgb(55, 55, 55) !important;
+  transition: all .1s ease;
+}
+#navbar{
+  position: fixed;
+  top: 0 !important;
+  left: 0 !important;
+  z-index: 1000 !important;
+  transition: all .3s ease;
+}
+
+#intro{
+  margin-top: 50px !important;
+  height: 100vh;
+  width: 100% !important;
+  padding: 0 !important;
+  box-sizing: border-box !important;
+  background-image: url(./img/banner-1.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+}
