--- a/styles.css
+++ b/styles.css
@@ -68,34 +68,27 @@
   background-color: rgb(55, 55, 55) !important;
   transition: all .1s ease;
 }
-#navbar{
-  position: fixed;
-  top: 0 !important;
-  left: 0 !important;
-  z-index: 1000 !important;
-  transition: all .3s ease;
-}
-
 #intro{
-  margin-top: 50px !important;
-  height: 100vh;
+  padding-top: 1rem !important;
   width: 100% !important;
   padding: 0 !important;
   box-sizing: border-box !important;
   background-image: url(./img/banner-1.jpg);
-  /* background-size: cover; */
+  background-color: aquamarine;
+  background-size: cover;
   /* background-position: center; */
   background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
 }
-
 #intro-text{
-  height: 79%;
+  margin-top: 7rem;
 }
-#intro-box{
-  height: 20%;
-}
-
 @media (min-width: 992px) {
+  /* #intro{
+    height: 120vh !important;
+  } */
   #intro-text{
     width: 50% !important;
   }
