--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,31 @@
 #intro-text{
   margin-top: 7rem;
 }
+#btn-view, #btn-prev, #btn-next{
+  border: none;
+  background-color: rgb(237, 236, 236);
+  padding: 6px 12px;
+  border-radius: 4px;
+  transition: all .2s ease;
+}
+#btn-view:hover{
+  background-color: orange !important;
+  transition: all .2s ease;
+}
+#btn-prev:hover, #btn-next:hover{
+  background-color: green !important;
+  color: white;
+  transition: all .2s ease;
+}
+#btn-prev:focus:active, #btn-next:focus:active{
+  background-color: orange !important;
+  transition: all .2s ease;
+}
+
+#list-categories{
+  width: 100%;
+  height: 300px;
+}
 @media (min-width: 992px) {
   /* #intro{
     height: 120vh !important;
