--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
   box-sizing: border-box !important;
 }
 
+#navbar{
+  position: fixed;
+  top: 0;
+  z-index: 1000;
+}
 #email-input{
   width: 100%;
   padding: 20px 30px !important;
@@ -15,6 +20,7 @@
   border: none;
   outline: none;
   width: 100%;
+  
 }
 #email-input:focus-within{
   box-shadow: 0px 0px 0px 5px rgb(159, 191, 235);
@@ -83,7 +89,7 @@
   justify-content: end;
 }
 #intro-text{
-  margin-top: 7rem;
+  margin-top: 15rem;
 }
 #btn-view, #btn-prev, #btn-next{
   border: none;
@@ -110,6 +116,48 @@
   width: 100%;
   /* height: 300px; */
 }
+
+#card{
+  background-color: white;
+}
+#card:hover{
+  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 10px 10px 0px 0px;
+}
+
+#percent{
+  border: 1px solid silver;
+  color: silver;
+  padding: 2px 5px;
+  font-size: 12px;
+}
+#btn-heart{
+  border: 1px solid black;
+  background-color: white;
+  padding: 8px;
+  border-radius: 5px;
+  transition: all .5s ease;
+}
+#btn-heart:hover{
+  background-color: #000;
+  color: white;
+  transition: all .5s ease;
+}
+#btn{
+  position: relative;
+  padding-bottom: 35px;
+}
+#card-btn{
+  display: none !important;
+  display: flex;
+  gap: 10px;
+  top: 5px;
+  position: absolute;
+}
+#card:hover #card-btn{
+  display: flex !important; 
+}
+
 @media (min-width: 992px) {
   /* #intro{
     height: 120vh !important;
