--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,7 @@
   background-color: rgb(237, 236, 236);
   padding: 6px 12px;
   border-radius: 4px;
+  font-size: 12px;
   transition: all .2s ease;
 }
 #btn-view:hover{
@@ -121,7 +122,7 @@
   background-color: white;
 }
 #card:hover{
-  box-shadow: 1px 1px 10px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 5px 2px rgba(0, 0, 0, 0.3);
   border-radius: 10px 10px 0px 0px;
 }
 
