--- a/styles.css
+++ b/styles.css
@@ -191,11 +191,87 @@
   transition: all .2s ease;
 }
 
-
+#banner{
+  width: 100%;
+  height: 450px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 30px;
+}
+#block-1{
+  grid-area: 1 / 1 / 3 / 4;
+  background-color: blue;
+  background-image: url(./img/banner-ad-1.jpg) ;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#block-2{
+  grid-area: 1 / 4 / 2 / 6;
+  background-color: brown;
+  background-image: url(./img/banner-ad-2.jpg) ;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#block-3{
+  grid-area: 2 / 4 / 3 / 6;
+  background-color: darkgoldenrod;
+  background-image: url(./img/banner-ad-3.jpg) ;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+#shop-now{
+  color: white;
+  text-decoration: none;
+  font-weight: 700;
+  position: relative;
+}
+#shop-now::after{
+  position: absolute;
+  bottom: -5px;
+  /* left: 0; */
+  right: 0;
+  content: "";
+  width: 0;
+  height: 2px;
+  background-color: whitesmoke;
+  transition: all .3s ease;
+}
+#shop-now::before{
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+#shop-now:hover::after{
+  width: 100%;
+  left: 0;
+  transition: all .3s ease;
+}
+@media (max-width: 1200px) {
+  #banner{
+    width: 100%;
+    height: 700px;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 30px;
+  }
+  #block-1{
+    grid-area: 1 / 1 / 3 / 2;
+  }
+  #block-2{
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  #block-3{
+    grid-area: 4 / 1 / 5 / 2;
+  }
+}
 @media (min-width: 992px) {
-  /* #intro{
-    height: 120vh !important;
-  } */
   #btn-view{
     font-size: 16px;
   }
